--- a/client/static/index.html
+++ b/client/static/index.html
@@ -2,11 +2,15 @@
   <head>
     <meta charset="utf-8" />
     <title>Houseparty Organizer</title>
+    <link href="https://unpkg.com/normalize.css@^4.1.1" rel="stylesheet" />
+    <link href="https://unpkg.com/@blueprintjs/core@^1.11.0/dist/blueprint.css" rel="stylesheet" />
+    <link href="/static/bundle.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/4.2.2/react-router-dom.min.js"></script>
     <script src="/static/bundle.js" type="text/javascript"></script>
   </body>
 </html>
