--- a/client/static/index.html
+++ b/client/static/index.html
@@ -4,6 +4,7 @@
     <title>Houseparty Organizer</title>
     <link href="https://unpkg.com/normalize.css@^4.1.1" rel="stylesheet" />
     <link href="https://unpkg.com/@blueprintjs/core@^1.11.0/dist/blueprint.css" rel="stylesheet" />
+    <link href="https://unpkg.com/@blueprintjs/datetime@1.24.0/dist/blueprint-datetime.css" rel="stylesheet" />
     <link href="/static/bundle.css" rel="stylesheet" />
   </head>
   <body>
